--- a/src/Resources/Locales/zh_TW.axaml
+++ b/src/Resources/Locales/zh_TW.axaml
@@ -10,6 +10,12 @@
   <x:String x:Key="Text.About.Fonts" xml:space="preserve">• 等寬字型來自於 </x:String>
   <x:String x:Key="Text.About.SourceCode" xml:space="preserve">• 專案原始碼地址 </x:String>
   <x:String x:Key="Text.About.SubTitle" xml:space="preserve">開源免費的Git客戶端</x:String>
+  <x:String x:Key="Text.AddWorktree" xml:space="preserve">新增工作樹</x:String>
+  <x:String x:Key="Text.AddWorktree.Location" xml:space="preserve">工作樹路徑 ：</x:String>
+  <x:String x:Key="Text.AddWorktree.Name" xml:space="preserve">自定义分支名 ：</x:String>
+  <x:String x:Key="Text.AddWorktree.Name.Placeholder" xml:space="preserve">選填。 預設使用目標資料夾名稱。</x:String>
+  <x:String x:Key="Text.AddWorktree.Tracking" xml:space="preserve">跟蹤分支</x:String>
+  <x:String x:Key="Text.AddWorktree.Tracking.Toggle" xml:space="preserve">設置上游跟蹤分支</x:String>
   <x:String x:Key="Text.Apply" xml:space="preserve">應用補丁(apply)</x:String>
   <x:String x:Key="Text.Apply.Error" xml:space="preserve">錯誤</x:String>
   <x:String x:Key="Text.Apply.Error.Desc" xml:space="preserve">輸出錯誤，並終止應用補丁</x:String>
@@ -308,6 +314,10 @@
   <x:String x:Key="Text.Launcher.Error" xml:space="preserve">出錯了</x:String>
   <x:String x:Key="Text.Launcher.Info" xml:space="preserve">系統提示</x:String>
   <x:String x:Key="Text.Launcher.Menu" xml:space="preserve">主選單</x:String>
+  <x:String x:Key="Text.LockWorktree" xml:space="preserve">鎖定工作樹</x:String>
+  <x:String x:Key="Text.LockWorktree.Reason" xml:space="preserve">原因 ：</x:String>
+  <x:String x:Key="Text.LockWorktree.Reason.Placeholder" xml:space="preserve">選填，為此鎖定操作描述原因。</x:String>
+  <x:String x:Key="Text.LockWorktree.Target" xml:space="preserve">目標工作樹 ：</x:String>
   <x:String x:Key="Text.Merge" xml:space="preserve">合併分支</x:String>
   <x:String x:Key="Text.Merge.Into" xml:space="preserve">目標分支 ：</x:String>
   <x:String x:Key="Text.Merge.Mode" xml:space="preserve">合併方式 ：</x:String>
@@ -370,6 +380,8 @@
   <x:String x:Key="Text.Preference.DiffMerge.Type" xml:space="preserve">工具</x:String>
   <x:String x:Key="Text.PruneRemote" xml:space="preserve">清理遠端已刪除分支</x:String>
   <x:String x:Key="Text.PruneRemote.Target" xml:space="preserve">目標 ：</x:String>
+  <x:String x:Key="Text.PruneWorktrees" xml:space="preserve">清理工作樹</x:String>
+  <x:String x:Key="Text.PruneWorktrees.Tip" xml:space="preserve">清理在`$GIT_DIR/worktrees`中的無效工作樹資訊</x:String>
   <x:String x:Key="Text.Pull" xml:space="preserve">拉回(pull)</x:String>
   <x:String x:Key="Text.Pull.Branch" xml:space="preserve">拉取分支 ：</x:String>
   <x:String x:Key="Text.Pull.Into" xml:space="preserve">本地分支 ：</x:String>
@@ -410,6 +422,9 @@
   <x:String x:Key="Text.RemoteCM.Fetch" xml:space="preserve">拉取(fetch)更新</x:String>
   <x:String x:Key="Text.RemoteCM.OpenInBrowser" xml:space="preserve">在瀏覽器中訪問網址</x:String>
   <x:String x:Key="Text.RemoteCM.Prune" xml:space="preserve">清理遠端已刪除分支</x:String>
+  <x:String x:Key="Text.RemoveWorktree" xml:space="preserve">刪除工作樹操作確認</x:String>
+  <x:String x:Key="Text.RemoveWorktree.Force" xml:space="preserve">啟用`--force`選項</x:String>
+  <x:String x:Key="Text.RemoveWorktree.Target" xml:space="preserve">目標工作樹 ：</x:String>
   <x:String x:Key="Text.RenameBranch" xml:space="preserve">分支重新命名</x:String>
   <x:String x:Key="Text.RenameBranch.Name" xml:space="preserve">新的名稱 ：</x:String>
   <x:String x:Key="Text.RenameBranch.Name.Placeholder" xml:space="preserve">新的分支名不能與現有分支名相同</x:String>
@@ -443,6 +458,9 @@
   <x:String x:Key="Text.Repository.Tags" xml:space="preserve">標籤列表</x:String>
   <x:String x:Key="Text.Repository.Tags.Add" xml:space="preserve">新建標籤</x:String>
   <x:String x:Key="Text.Repository.Terminal" xml:space="preserve">在終端中開啟</x:String>
+  <x:String x:Key="Text.Repository.Worktrees" xml:space="preserve">工作樹清單</x:String>
+  <x:String x:Key="Text.Repository.Worktrees.Add" xml:space="preserve">新建工作樹</x:String>
+  <x:String x:Key="Text.Repository.Worktrees.Prune" xml:space="preserve">清理</x:String>
   <x:String x:Key="Text.RepositoryURL" xml:space="preserve">遠端倉庫地址</x:String>
   <x:String x:Key="Text.Reset" xml:space="preserve">重置(reset)當前分支到指定版本</x:String>
   <x:String x:Key="Text.Reset.Mode" xml:space="preserve">重置模式 ：</x:String>
@@ -543,4 +561,8 @@
   <x:String x:Key="Text.WorkingCopy.Unstaged.ViewAssumeUnchaged" xml:space="preserve">檢視忽略變更檔案</x:String>
   <x:String x:Key="Text.WorkingCopy.ResolveTip" xml:space="preserve">請選中衝突檔案，開啟右鍵選單，選擇合適的解決方式</x:String>
   <x:String x:Key="Text.Worktree" xml:space="preserve">本地工作樹</x:String>
+  <x:String x:Key="Text.Worktree.CopyPath" xml:space="preserve">拷贝工作樹路徑</x:String>
+  <x:String x:Key="Text.Worktree.Lock" xml:space="preserve">鎖定工作樹</x:String>
+  <x:String x:Key="Text.Worktree.Remove" xml:space="preserve">移除工作樹</x:String>
+  <x:String x:Key="Text.Worktree.Unlock" xml:space="preserve">解除鎖定工作樹</x:String>
 </ResourceDictionary>
