--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -119,7 +119,7 @@
         </Grid>
         
         <!-- Dashboard -->
-        <Grid Grid.Row="1" Margin="0,0,0,8" RowDefinitions="Auto,Auto,28,Auto,28,*,28,Auto,28,Auto" IsVisible="{Binding !IsSearching}">
+        <Grid Grid.Row="1" Margin="0,0,0,8" RowDefinitions="Auto,Auto,28,Auto,28,*,28,Auto,28,Auto,28,Auto" IsVisible="{Binding !IsSearching}">
           <!-- Page Switcher for Right Panel -->
           <Border Grid.Row="0" Margin="8,0,4,0" BorderThickness="1" BorderBrush="{DynamicResource Brush.Border2}" CornerRadius="6">
             <Border CornerRadius="6" ClipToBounds="True">
@@ -463,7 +463,7 @@
                       Command="{Binding UpdateSubmodules}"
                       IsVisible="{Binding Submodules, Converter={x:Static c:ListConverters.IsNotNullOrEmpty}}"
                       ToolTip.Tip="{DynamicResource Text.Repository.Submodules.Update}">
-                <Path x:Name="iconSubmoduleUpdate" Width="12" Height="12" Data="{StaticResource Icons.Loading}"/>
+                <Path Width="12" Height="12" Data="{StaticResource Icons.Loading}"/>
               </Button>
               <Button Grid.Column="3"
                       Classes="icon_button"
@@ -526,6 +526,96 @@
                     <Border Padding="0,0,4,0">
                       <TextBlock Text="{Binding}" ClipToBounds="True" Classes="monospace" TextTrimming="CharacterEllipsis"/>
                     </Border>
+                  </DataTemplate>
+                </DataGridTemplateColumn.CellTemplate>
+              </DataGridTemplateColumn>
+            </DataGrid.Columns>
+          </DataGrid>
+
+          <!-- Worktrees -->
+          <ToggleButton Grid.Row="10" Classes="group_expander" IsChecked="{Binding IsWorktreeGroupExpanded, Mode=TwoWay}">
+            <Grid ColumnDefinitions="Auto,*,Auto,Auto">
+              <TextBlock Grid.Column="0" Classes="group_header_label" Margin="0" Text="{DynamicResource Text.Repository.Worktrees}"/>
+              <TextBlock Grid.Column="1" Text="{Binding Worktrees, Converter={x:Static c:ListConverters.ToCount}}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold"/>
+              <Button Grid.Column="2"
+                      Classes="icon_button"
+                      Width="14"
+                      Margin="8,0"
+                      Command="{Binding PruneWorktrees}"
+                      IsVisible="{Binding Worktrees, Converter={x:Static c:ListConverters.IsNotNullOrEmpty}}"
+                      ToolTip.Tip="{DynamicResource Text.Repository.Worktrees.Prune}">
+                <Path x:Name="icon" Width="12" Height="12" Data="{StaticResource Icons.Loading}"/>
+              </Button>
+              <Button Grid.Column="3"
+                      Classes="icon_button"
+                      Width="14"
+                      Margin="0,0,8,0"
+                      Command="{Binding AddWorktree}"
+                      ToolTip.Tip="{DynamicResource Text.Repository.Worktrees.Add}">
+                <Path Width="12" Height="12" Data="{StaticResource Icons.Worktree.Add}"/>
+              </Button>
+            </Grid>
+          </ToggleButton>
+          <DataGrid Grid.Row="11"
+                    MaxHeight="200"
+                    Margin="8,0,4,0"
+                    Background="Transparent"
+                    ItemsSource="{Binding Worktrees}"
+                    SelectionMode="Single"
+                    CanUserReorderColumns="False"
+                    CanUserResizeColumns="False"
+                    CanUserSortColumns="False"
+                    IsReadOnly="True"
+                    HeadersVisibility="None"
+                    Focusable="False"
+                    RowHeight="26"
+                    HorizontalScrollBarVisibility="Disabled"
+                    VerticalScrollBarVisibility="Auto"
+                    ContextRequested="OnWorktreeContextRequested"
+                    DoubleTapped="OnDoubleTappedWorktree"
+                    IsVisible="{Binding IsWorktreeGroupExpanded, Mode=OneWay}">
+            <DataGrid.Styles>
+              <Style Selector="DataGridRow">
+                <Setter Property="CornerRadius" Value="4" />
+              </Style>
+
+              <Style Selector="DataGridRow /template/ Border#RowBorder">
+                <Setter Property="ClipToBounds" Value="True" />
+              </Style>
+
+              <Style Selector="DataGridRow:pointerover /template/ Rectangle#BackgroundRectangle">
+                <Setter Property="Fill" Value="{DynamicResource Brush.AccentHovered}" />
+              </Style>
+
+              <Style Selector="DataGridRow:selected /template/ Rectangle#BackgroundRectangle">
+                <Setter Property="Fill" Value="{DynamicResource Brush.Accent}" />
+              </Style>
+            </DataGrid.Styles>
+
+            <DataGrid.Columns>
+              <DataGridTemplateColumn Header="ICON">
+                <DataGridTemplateColumn.CellTemplate>
+                  <DataTemplate>
+                    <Path Width="10" Height="10" Margin="8,0,0,0" Data="{StaticResource Icons.Worktree}"/>
+                  </DataTemplate>
+                </DataGridTemplateColumn.CellTemplate>
+              </DataGridTemplateColumn>
+
+              <DataGridTemplateColumn Width="*" Header="FullPath">
+                <DataGridTemplateColumn.CellTemplate>
+                  <DataTemplate>
+                    <TextBlock Classes="monospace" Margin="8,0,0,0" TextTrimming="CharacterEllipsis">
+                      <Run Text="{Binding FullPath}"/>
+                      <Run Text="{Binding Name}" Foreground="{DynamicResource Brush.FG2}"/>
+                    </TextBlock>
+                  </DataTemplate>
+                </DataGridTemplateColumn.CellTemplate>
+              </DataGridTemplateColumn>
+
+              <DataGridTemplateColumn Header="FullPath">
+                <DataGridTemplateColumn.CellTemplate>
+                  <DataTemplate>
+                    <Path Width="10" Height="10" Margin="4,0,8,0" Data="{StaticResource Icons.Lock}" Fill="{DynamicResource Brush.FG2}" IsVisible="{Binding IsLocked}"/>
                   </DataTemplate>
                 </DataGridTemplateColumn.CellTemplate>
               </DataGridTemplateColumn>
