--- a/src/Resources/Locales/zh_TW.axaml
+++ b/src/Resources/Locales/zh_TW.axaml
@@ -12,6 +12,7 @@
   <x:String x:Key="Text.About.SubTitle" xml:space="preserve">開源免費的Git客戶端</x:String>
   <x:String x:Key="Text.AddWorktree" xml:space="preserve">新增工作樹</x:String>
   <x:String x:Key="Text.AddWorktree.Location" xml:space="preserve">工作樹路徑 ：</x:String>
+  <x:String x:Key="Text.AddWorktree.Location.Placeholder" xml:space="preserve">填寫該工作樹的路徑。支援相對路徑。</x:String>
   <x:String x:Key="Text.AddWorktree.Name" xml:space="preserve">自定义分支名 ：</x:String>
   <x:String x:Key="Text.AddWorktree.Name.Placeholder" xml:space="preserve">選填。 預設使用目標資料夾名稱。</x:String>
   <x:String x:Key="Text.AddWorktree.Tracking" xml:space="preserve">跟蹤分支</x:String>
@@ -314,10 +315,6 @@
   <x:String x:Key="Text.Launcher.Error" xml:space="preserve">出錯了</x:String>
   <x:String x:Key="Text.Launcher.Info" xml:space="preserve">系統提示</x:String>
   <x:String x:Key="Text.Launcher.Menu" xml:space="preserve">主選單</x:String>
-  <x:String x:Key="Text.LockWorktree" xml:space="preserve">鎖定工作樹</x:String>
-  <x:String x:Key="Text.LockWorktree.Reason" xml:space="preserve">原因 ：</x:String>
-  <x:String x:Key="Text.LockWorktree.Reason.Placeholder" xml:space="preserve">選填，為此鎖定操作描述原因。</x:String>
-  <x:String x:Key="Text.LockWorktree.Target" xml:space="preserve">目標工作樹 ：</x:String>
   <x:String x:Key="Text.Merge" xml:space="preserve">合併分支</x:String>
   <x:String x:Key="Text.Merge.Into" xml:space="preserve">目標分支 ：</x:String>
   <x:String x:Key="Text.Merge.Mode" xml:space="preserve">合併方式 ：</x:String>
