--- a/src/Views/StashesPage.axaml
+++ b/src/Views/StashesPage.axaml
@@ -17,28 +17,59 @@
     </Grid.ColumnDefinitions>
 
     <!-- Left -->
-    <Grid Grid.Column="0" RowDefinitions="28,*,28,*">
+    <Grid Grid.Column="0" RowDefinitions="28,36,*,28,*">
       <!-- Stash Bar -->
-      <Border Grid.Row="0" BorderThickness="0,0,0,1" BorderBrush="{DynamicResource Brush.Border0}">
-        <Grid ColumnDefinitions="Auto,Auto,Auto,*,Auto">
-          <Path Grid.Column="0" Margin="8,0,0,0" Width="14" Height="14" Fill="{DynamicResource Brush.FG2}" Data="{StaticResource Icons.Stashes}"/>
-          <TextBlock Grid.Column="1" Text="{DynamicResource Text.Stashes.Stashes}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold" Margin="8,0,0,0"/>
-          <TextBlock Grid.Column="2" Text="{Binding Stashes, Converter={x:Static c:ListConverters.ToCount}}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold"/>
-          <Button Grid.Column="4"
-                  Classes="icon_button"
-                  Width="26" Height="14"
-                  Padding="0"
-                  Command="{Binding Clear}"
-                  IsEnabled="{Binding Stashes.Count, Converter={x:Static c:IntConverters.IsGreaterThanZero}}">
-            <Path Width="14" Height="14" Data="{StaticResource Icons.Clean}"/>
-          </Button>
-        </Grid>
+      <Grid Grid.Row="0" ColumnDefinitions="Auto,Auto,Auto,*,Auto">
+        <Path Grid.Column="0" Margin="8,0,0,0" Width="14" Height="14" Fill="{DynamicResource Brush.FG2}" Data="{StaticResource Icons.Stashes}"/>
+        <TextBlock Grid.Column="1" Text="{DynamicResource Text.Stashes.Stashes}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold" Margin="8,0,0,0"/>
+        <TextBlock Grid.Column="2" Text="{Binding Stashes, Converter={x:Static c:ListConverters.ToCount}}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold"/>
+        <Button Grid.Column="4"
+                Classes="icon_button"
+                Width="26" Height="14"
+                Padding="0"
+                Command="{Binding Clear}"
+                IsEnabled="{Binding Stashes.Count, Converter={x:Static c:IntConverters.IsGreaterThanZero}}">
+          <Path Width="14" Height="14" Data="{StaticResource Icons.Clean}"/>
+        </Button>
+      </Grid>
+
+      <!-- Search Bar -->
+      <Border Grid.Row="1" BorderThickness="0,1" BorderBrush="{DynamicResource Brush.Border0}">
+        <TextBox Grid.Row="1"
+                 Height="24"
+                 Margin="4,0"
+                 BorderThickness="1"
+                 CornerRadius="12"
+                 Text="{Binding SearchFilter, Mode=TwoWay}"
+                 BorderBrush="{DynamicResource Brush.Border2}"
+                 VerticalContentAlignment="Center">
+          <TextBox.InnerLeftContent>
+            <Path Width="14" Height="14"
+                  Margin="6,0,0,0"
+                  Fill="{DynamicResource Brush.FG2}"
+                  Data="{StaticResource Icons.Search}"/>
+          </TextBox.InnerLeftContent>
+
+          <TextBox.InnerRightContent>
+            <Button Classes="icon_button"
+                    Width="16"
+                    Margin="0,0,6,0"
+                    Command="{Binding ClearSearchFilter}"
+                    IsVisible="{Binding SearchFilter, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"
+                    HorizontalAlignment="Right">
+              <Path Width="14" Height="14"
+                    Margin="0,1,0,0"
+                    Fill="{DynamicResource Brush.FG1}"
+                    Data="{StaticResource Icons.Clear}"/>
+            </Button>
+          </TextBox.InnerRightContent>
+        </TextBox>
       </Border>
 
       <!-- Stash List -->
-      <DataGrid Grid.Row="1"
+      <DataGrid Grid.Row="2"
                 Background="{DynamicResource Brush.Contents}"
-                ItemsSource="{Binding Stashes}"
+                ItemsSource="{Binding VisibleStashes}"
                 SelectedItem="{Binding SelectedStash, Mode=TwoWay}"
                 SelectionMode="Single"
                 CanUserReorderColumns="False"
@@ -71,7 +102,7 @@
       </DataGrid>
 
       <!-- Changes Bar -->
-      <Border Grid.Row="2" BorderThickness="0,1" BorderBrush="{DynamicResource Brush.Border0}">
+      <Border Grid.Row="3" BorderThickness="0,1" BorderBrush="{DynamicResource Brush.Border0}">
         <Grid ColumnDefinitions="Auto,Auto,*">
           <Path Grid.Column="0" Margin="8,0,0,0" Width="14" Height="14" Fill="{DynamicResource Brush.FG2}" Data="{StaticResource Icons.File}"/>
           <TextBlock Grid.Column="1" Text="{DynamicResource Text.Stashes.Changes}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold" Margin="8,0,0,0"/>
@@ -80,7 +111,7 @@
       </Border>
 
       <!-- View Changes -->
-      <DataGrid Grid.Row="3"
+      <DataGrid Grid.Row="4"
                 Background="{DynamicResource Brush.Contents}"
                 ItemsSource="{Binding Changes}"
                 SelectedItem="{Binding SelectedChange, Mode=TwoWay}"
